# website-carbon-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  website-carbon.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  website-carbon.rockspec  website-carbon_sdk.lua  website-carbon_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  websitecarbon_sdk.py  websitecarbon_types.py
py/core/: context.py  control.py  error.py  response.py  utility_type.py
py/entity/: data_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  netsim_feature.py  paging_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_data_direct.py  test_data_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  make_context.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_spec.py  param.py  prepare_auth.py  prepare_params.py  prepare_path.py  register.py  result_basic.py  result_body.py  result_headers.py  transform_request.py
(+412 files in other folders)
